                  or not SpecTcl is in a test system.
pre2:
  March 6, 2009  - Make the rEvent array hold doubles not floats.
  March 18, 2009 - Fix tkcon.tcl so it does not implement a clear command
                   that interferes with the SpecTcl clear command.
  March 24, 2009 - Make the delgrob dialog a multiselect.
  May 1, 2009    - CSpectrum2Dm.{h,cpp}  Ensure these spectra get put in the
                  don't need a parameter list rather than some need a parameter list
                  which causes them to be grossly underincremented.
pre3:
  May   2009     - Port to debian lenny with minimized compiler warnings.
  May 20,2009    - In source files add back the newline after each lineof
                   a multiline command to prevent syntax errors on e.g.
                   pseudo defs.
  May 27, 2009   - Fix error switch/case for handling gate point scaling.
                   gamma gates resulted in no points being accepted.
  August 13, 2009 - Fix error in Strip chart spectrum was not requiring
                   that target parameter was defined.
                  - Fix error in strip chart shift.  If shift is larger than spectrum
                    channel count would segfault.
  Sep 4, 2009     - Fix BZ 378 - Segfaults can happen when cutting down the
                    Y parameters of a g2d spectrum to generate the title.

pre4: 
  October 11, 2009 - BZ 379 when SpecTcl started using double for parameters
                    in an event, filters broke.  The fix allows both filters
                    from older and current versions of SpecTcl to be read.
  October 14, 2009 - Strip chart spectrum was miscalculateing m_nOffset on
                     shifts to the left leaving gaps in the spectra for
                     continuously varying parameters.
  December 4, 2009 - Fix error in XMWarningDialog::Create .. was referencing
                     button objects prior to ensuring they were created.

